# Matrix3D

./: .gitignore  CMakeLists.txt  Makefile  Makefile.msvc  README.md  cubeobject.mes  gensphere.c  m3d_camera.cpp  m3d_camera.hh  m3d_color.cpp  m3d_color.hh  m3d_display.cpp  m3d_display.hh  m3d_display_sdl.cpp  m3d_display_sdl.hh  m3d_display_wingdi.cpp  m3d_display_wingdi.hh  m3d_illum.cpp  m3d_illum.hh  m3d_interp.cpp  m3d_interp.hh  m3d_light_source.cpp  m3d_light_source.hh  m3d_math.cpp  m3d_math.hh  m3d_math_axis.cpp  m3d_math_axis.hh  m3d_math_data.hh  m3d_math_matrix.cpp  m3d_math_matrix.hh  m3d_math_point.cpp  m3d_math_point.hh  m3d_math_vector.cpp  m3d_math_vector.hh  m3d_object.cpp  m3d_object.hh  m3d_render_color.hh  m3d_renderer.cpp  m3d_renderer.hh  m3d_renderer_flat.cpp  (+18 more)
